eclipse-workspace/Class1/src/objects/Invoice__c.object
<CustomObject>
    <description>Invoice object</description>
    <fields>
        <fullName>Aggregate_Amount__c</fullName>
        <label>Aggregate Amount</label>
        <summarizedField>Line_Item__c.Total_Amount__c</summarizedField>
        <summaryForeignKey>Line_Item__c.Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice_Id__c</fullName>
        <displayFormat>INV-{0000}</displayFormat>
        <externalId>true</externalId>
        <label>Invoice Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Order_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Order Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order_Date__c</fullName>
        <label>Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Invoice_Number__c</fullName>
        <displayFormat>IN-{0000}</displayFormat>
        <label>Sales Invoice Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <label>Total Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transaction_Id__c</fullName>
        <displayFormat>T-{00}</displayFormat>
        <externalId>true</externalId>
        <label>Transaction Id</label>
        <type>AutoNumber</type>
    </fields>
    <label>Invoice</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Invoice Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>